--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "node-compass": "0.2.3",
     "serve-favicon": "~2.2.0",
     "connect-assets": "^4.7.0"
+  },
+  "devDependencies": {
+    "grunt-shipit": "^1.0.0",
+    "grunt": "^0.4.5",
+    "shipit-deploy": "^1.3.1"
   }
 }
