--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
   },
   "dependencies": {
     "body-parser": "~1.12.0",
+    "bower": "1.3.11",
+    "connect-assets": "^4.7.0",
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
     "express": "~4.12.2",
     "hbs": "~2.9.0",
+    "mongodb": "^2.0.27",
+    "mongoose": "^4.0.1",
     "morgan": "~1.5.1",
     "node-compass": "0.2.3",
-    "serve-favicon": "~2.2.0",
-    "connect-assets": "^4.7.0"
+    "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
     "grunt-shipit": "^1.0.0",
